--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://accounts.google.com
+          client-id: 383477095211-avn1fa1u97q4lp4i0rvsudsr3sog99ui.apps.googleusercontent.com
   datasource:
     url: jdbc:h2:file:./db/codebreaker
   jpa:
@@ -6,11 +12,11 @@ spring:
     hibernate:
       ddl-auto: update
 # Enable the following lines ONLY for DDL generation.
-    properties:
-      javax:
-        persistence:
-          schema-generation:
-            create-source: metadata
-            scripts:
-              action: create
-              create-target: docs/sql/ddl.sql
+#    properties:
+#      javax:
+#        persistence:
+#          schema-generation:
+#            create-source: metadata
+#            scripts:
+#              action: create
+#              create-target: docs/sql/ddl.sql
