--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,18 @@
+server:
+  error:
+    include-message: always
+  forward-headers-strategy: native
+  port: 18081
+  servlet:
+    context-path: /codebreaker
+
 spring:
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: https://accounts.google.com
-          client-id: 383477095211-avn1fa1u97q4lp4i0rvsudsr3sog99ui.apps.googleusercontent.com
+          client-id: 651278118276-csdqkokmpveuvkoaqgksi6o0e0gfj2cu.apps.googleusercontent.com
   datasource:
     url: jdbc:h2:file:./db/codebreaker
   jpa:
